@@ -1,3 +1,13 @@
+2008-09-24  Don Porter  <dgp@users.sourceforge.net>
+
+	TIP #323 IMPLEMENTATION (partial)
+
+	* doc/file.n:		Revise [file delete] and [file mkdir] to
+	* generic/tclCmdAH.c:	accept zero "pathname" arguments (the
+	* generic/tclFCmd.c:	no-op case).
+	* tests/cmdAH.test:
+	* tests/fCmd.test:
+
 2008-09-24  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOMethod.c (DBPRINT): Remove obsolete debugging macro.
